force-app/main/default/objects/Certification__c/fields/Certification_Owner__c.field-meta.xml
<CustomField>
    <fullName>Certification_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the person who took the test</description>
    <label>Certification Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>