force-app/main/default/objects/Certification__c/fields/Date_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken__c</fullName>
    <description>The date this exam was taken</description>
    <label>Date Taken</label>
    <required>true</required>
    <type>Date</type>
</CustomField>