force-app/main/default/objects/Certification__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <formula>Total_Score__c &gt;= Passing_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/Fail</label>
    <type>Checkbox</type>
</CustomField>