force-app/main/default/objects/Certification__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <description>The required passing score when the exam was taken</description>
    <label>Passing Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>