force-app/main/default/objects/Certification__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>The total score for this certification</description>
    <label>Total Score</label>
    <summarizedField>Certification_Topic__c.Score__c</summarizedField>
    <summaryForeignKey>Certification_Topic__c.Certification__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>